# ConditionalGeneEssentiality

./: LICENSE  README.md  environment.min.yml  environment.yml  pyproject.toml  repo_paths.py  requirements.txt
conditional_gene_essentiality.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_analysis/: DESIGN_DECISIONS_LOG.md  paths.py  phase0_elucidation.ipynb  run_phase0.py
data_analysis/outputs/: chemical_component_cross_species_coverage.csv  chemical_encoding_coverage_by_org.csv  component_by_organism_experiment_counts_all.csv  component_by_organism_experiment_counts_top20.csv  condition_diversity_by_org.csv  connected_media_degree_benchmark.csv  embedding_coverage_by_org.csv  embedding_coverage_summary.json  media_component_richness.csv  media_composition_audit.md  media_coverage_gap_summary.md  (+9 more)
data_processing/: build_canonical_v0.py  paths.py
docs/: PROJECT_RESTART_PLAN.md  REFACTORPLAN.md  canonical_build_manifest_v0.json  condition_encoding_manifest_v0.json  data_inputs_manifest_M0.json  embedding_manifest_m4.json  quality_tier_manifest_v0.json  splits_build_manifest_m3.json
embeddings/: __init__.py  build_embedding_manifest_m4.py  paths.py
evaluation/: __init__.py  compute_null_baselines.py  paths.py
modeling/: __init__.py  condition_spec.py  condition_store.py  data.py  embedding_store.py  fast_data.py  materialize_training_data.py  metrics.py  model.py  paths.py  run_quality_ablation.sh  split_diagnostics.py  split_protocol.py  train.py
splits/: __init__.py  build_organism_splits.py  build_quality_tiers.py  paths.py
(+55 files in other folders)
