[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "conditional-gene-essentiality"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "networkx>=3.0",
    "statsmodels>=0.14",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
include = ["data_processing*", "embeddings*", "evaluation*", "modeling*", "splits*"]

[tool.setuptools]
# repo_paths.py is a top-level module (no package dir) — register it explicitly.
py-modules = ["repo_paths"]
